--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -1,32 +1,32 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}
-    {{ post.title }}
-{% endblock  %}
+  {{ post.title }}
+{% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "blog/post-detail.css" %}">
-{% endblock  %}
+  <link rel="stylesheet" href="{% static 'blog/post-detail.css' %}" />
+{% endblock %}
 
 {% block content %}
-    <section id="summary">
-        <h2>{{ post.title }}</h2>
-        <div>
-            {% for tag in post_tags %}
-                <span class="tag">{{ tag.caption }}</span>
-            {% endfor %}
-        </div>
-        <article>
-            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}">
-            <address>By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a></address>
-            <div>
-                Last updated on <time>{{ post.date|date:"d M Y" }}</time>
-            </div>
-        </article>
-    </section>
+  <section id="summary">
+    <h2>{{ post.title }}</h2>
+    <div>
+      {% for tag in post_tags %}
+        <span class="tag">{{ tag.caption }}</span>
+      {% endfor %}
+    </div>
+    <article>
+      <img src="{{ post.image.url }}" alt="{{ post.title }}" />
+      <address>
+        By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a>
+      </address>
+      <div>
+        Last updated on <time>{{ post.date|date:'d M Y' }}</time>
+      </div>
+    </article>
+  </section>
 
-    <main>
-        {{ post.content|linebreaks }}
-    </main>
-{% endblock  %}
+  <main>{{ post.content|linebreaks }}</main>
+{% endblock %}
